Integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -35,8 +35,70 @@
       <p>👋Hey, I'm</p>
       <h1>Mohadeseh</h1>
       <p id="description">a front-end developer based in Iran</p>
-      <p  class="mb-5">and this is my online portfolio...</p>
-      <div><a class="button " href="#">More about me</a></div>
+      <p class="mb-5">and this is my online portfolio...</p>
+      <div><a class="button" href="#">More about me</a></div>
     </div>
+    <section id="project-section">
+      <p>These are some of my projects</p>
+      <div class="container">
+        <div class="row">
+          <div class="col d-none d-lg-block">
+            <img
+              class="img-fluid rounded mb-5"
+              src="/images/landing-page1.JPG"
+              alt=""
+            />
+          </div>
+          <div class="col project-description">
+            <h2>Landing Page</h2>
+            <p calss="d-none mb-5">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Dignissimos odio, nemo molestias porro expedita repellat quasi id
+              dolores deleniti quia corrupti sequi cupiditate adipisci
+              voluptate? Et voluptas architecto iusto? Nobis?
+            </p>
+            <a href="#" class="button-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col project-description">
+            <h2>Weather App</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Dignissimos odio, nemo molestias porro expedita repellat quasi id
+              dolores deleniti quia corrupti sequi cupiditate adipisci
+              voluptate? Et voluptas architecto iusto? Nobis?
+            </p>
+            <a href="#" class="button-outline">Learn more</a>
+          </div>
+          <div class="col d-none d-lg-block">
+            <img
+              class="img-fluid rounded mb-5"
+              src="/images/weather1.JPG"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col d-none d-lg-block">
+            <img
+              class="img-fluid rounded mb-5"
+              src="/images/survey-form.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col project-description">
+            <h2>Survey Form</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Dignissimos odio, nemo molestias porro expedita repellat quasi id
+              dolores deleniti quia corrupti sequi cupiditate adipisci
+              voluptate? Et voluptas architecto iusto? Nobis?
+            </p>
+            <a href="#" class="button-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
