--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@
     ></script>
   </head>
   <body>
-    <section id="about-section" class="container">
+    <section class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-            <div id="about-content" >
+            <div class="content" >
           <h1>Hi I am Mohadeseh Moradian</h1>
           <h2>Front-end developer, based in Iran.</h2>
           <p>
