Added contact page

--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
             class="img-fluid rounded-4 mb-3"
           />
           <h3 class="text-center">Landing Page</h3>
-          <p class="text-center text-opacity-50">Built with HTML and CSS</p>
+          <p class="text-center text-muted">Built with HTML and CSS</p>
         </div>        
         <div class="col-md-6 mb-4">
           <img
@@ -52,7 +52,7 @@
             class="img-fluid rounded-4 mb-3"
           />
           <h3 class="text-center">Weather App</h3>
-          <p class="text-center text-opacity-50">Built with HTML, CSS and JavaScript</p>
+          <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
         </div>
 
       </div>      
@@ -65,7 +65,7 @@
             class="img-fluid rounded-4 mb-3"
           />
           <h3 class="text-center">Survey Form</h3>
-          <p class="text-center text-opacity-50">Built with HTML and CSS</p>
+          <p class="text-center text-muted">Built with HTML and CSS</p>
         </div>        
         <div class="col-md-6 mb-4">
           <img
@@ -74,7 +74,7 @@
             class="img-fluid rounded-4 mb-3"
           />
           <h3 class="text-center">Tribute Page</h3>
-          <p class="text-center text-opacity-50">Built with HTML and CSS</p>
+          <p class="text-center text-muted">Built with HTML and CSS</p>
         </div>
 
       </div>
