--- a/about.html
+++ b/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-about</title>
+    <title>About Mohadeseh Moradian, a front-end developer</title>
+    <meta
+      name="description"
+      content="Mohadeseh is a front-end developer based in Iran."
+    />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -31,24 +35,96 @@
     ></script>
   </head>
   <body>
+    <nav>
+      <div class="header d-flex justify-content-between">
+        <a href="/"
+          ><div class="header-profile d-flex">
+            <img
+              class="profile-photo rounded-5"
+              src="/images/Profile.jpg"
+              alt="profile photo"
+            />
+            <p class="ps-3 d-none d-md-block">Mohadeseh Moradian</p>
+          </div></a
+        >
+        <ul>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li>
+            <a href="/about.html" title="About Mohadeseh" class="active"
+              >About</a
+            >
+          </li>
+          <li><a href="/work.html" title="Mohadeseh's work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Mohadeseh">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
     <section class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-            <div class="content" >
-          <h1>Hi I am Mohadeseh Moradian</h1>
-          <h2>Front-end developer, based in Iran.</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Repellendus, magnam beatae delectus quidem, laborum reiciendis eaque
-            tempore sed non, sint cupiditate ipsa reprehenderit! Hic minus at
-            dignissimos, cupiditate officiis odio.
-          </p>
-          <a href="#" class="button">See my projects</a>
-        </div></div>
+          <div class="content">
+            <h1>Hi I am Mohadeseh Moradian</h1>
+            <h2>Front-end developer, based in Iran.</h2>
+            <p>
+              I'm currently seeking new opportunities in front-end development.
+              I'm open to work remotely and have flexible hours. I'm highly
+              skilled in JavaScript and React.
+            </p>
+            <a href="/work.html" class="button" title="Mohadeseh's projects"
+              >See my projects</a
+            >
+          </div>
+        </div>
         <div class="col-lg-6">
           <img src="/images/Profile.jpg" alt="" class="img-fluid rounded-4" />
         </div>
       </div>
     </section>
+    <footer class="container">
+      <div
+        class="contact-box d-block d-md-flex justify-content-between mb-5 rounded-3"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">
+            Let's work together and i'll help you by all my best
+          </p>
+        </div>
+        <div>
+          <a class="button mt-4" href="/about.html" title="More about Mohadeseh"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:m.moradi6588@gmail.com"
+          class="email-link"
+          title="Email-link"
+          >m.moradi6588@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://github.com/Mohad6588" title="Github" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/moadese8892"
+          title="Instagram"
+          target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/mohadeseh"
+          title="Twitter"
+          target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+      </div>
+      <div class="text-center mt-5 fw-semibold">
+        ✌️ This website was coded by Mohadeseh Moradian, and is
+        <a href="">open-sourced</a>
+      </div>
+    </footer>
   </body>
 </html>
