--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>portfolio-about</title>
+  <title>Contact Mohadeseh</title>
+  <meta
+    name="description"
+    content="Mohadeseh is a front-end developer based in Iran."
+  />
   <!-- CSS only -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -29,16 +33,94 @@
   ></script>
 </head>
 <body>
+  <nav>
+    <div class="header d-flex justify-content-between">
+      <a href="/"
+        ><div class="header-profile d-flex">
+          <img
+            class="profile-photo rounded-5"
+            src="/images/Profile.jpg"
+            alt="profile photo"
+          />
+          <p class="ps-3 d-none d-md-block">Mohadeseh Moradian</p>
+        </div></a
+      >
+
+      <ul>
+        <li><a href="/" title="Homepage">Home</a></li>
+        <li><a href="/about.html" title="About Mohadeseh">About</a></li>
+        <li><a href="/work.html" title="Mohadeseh's work">Work</a></li>
+        <li>
+          <a href="/contact.html" title="Contact Mohadeseh" class="active"
+            >Contact</a
+          >
+        </li>
+      </ul>
+    </div>
+  </nav>
   <section id="contact-section" class="content-container container">
     <div class="content">
       <h1 class="mb-5">Let's get in touch!</h1>
-      <h3 class="text-start">Email</h3>
-      <p><a href="mailto:m.moradi6588@gamil.com">m.moradi6588@gamil.com</a> </p>     
-      <h3 class="text-start">Twitter</h3>
-    <p><a href="https://www.twitter.com/mohadeseh">@Mohadeseh</a>  </p>    
-      <h3 class="text-start">Instagram</h3>
-      <p><a href="https://www.instagram.com/moadese8892"">@Mohadese8892</a></p>
-
+      <h4 class="text-start">Email</h4>
+      <p><a href="mailto:m.moradi6588@gamil.com">m.moradi6588@gamil.com</a></p>
+      <h4 class="text-start">Twitter</h4>
+      <p>
+        <a href="https://www.twitter.com/mohadeseh" target="_blank"
+          >@Mohadeseh</a
+        >
+      </p>
+      <h4 class="text-start">Instagram</h4>
+      <p>
+        <a href="https://www.instagram.com/moadese8892" target="_blank"
+          >@Mohadese8892</a
+        >
+      </p>
     </div>
   </section>
+  <footer class="container">
+    <div
+      class="contact-box d-block d-md-flex justify-content-between mb-5 rounded-3"
+    >
+      <div>
+        <h3>Work Inquiry</h3>
+        <p class="text-muted">
+          Let's work together and i'll help you by all my best
+        </p>
+      </div>
+      <div>
+        <a class="button mt-4" href="/about.html" title="More about Mohadeseh"
+          >Contact me</a
+        >
+      </div>
+    </div>
+    <div class="d-flex justify-content-center mb-5">
+      <a
+        href="mailto:m.moradi6588@gmail.com"
+        class="email-link"
+        title="Email-link"
+        >m.moradi6588@gmail.com</a
+      >
+    </div>
+    <div class="social-links d-flex justify-content-center">
+      <a href="https://github.com/Mohad6588" title="Github" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+      <a
+        href="https://www.instagram.com/moadese8892"
+        title="Instagram"
+        target="_blank"
+        ><i class="fa-brands fa-instagram"></i
+      ></a>
+      <a
+        href="https://www.twitter.com/mohadeseh"
+        title="Twitter"
+        target="_blank"
+        ><i class="fa-brands fa-twitter"></i
+      ></a>
+    </div>
+    <div class="text-center mt-5 fw-semibold">
+      ✌️ This website was coded by Mohadeseh Moradian, and is
+      <a href="">open-sourced</a>
+    </div>
+  </footer>
 </body>
