--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div>
-          <a class="button mt-4" href="/about.html" title="More about Mohadeseh"
+          <a class="button mt-4" href="/contact.html" title="Contact Mohadeseh"
             >Contact me</a
           >
         </div>
@@ -123,7 +123,7 @@
       </div>
       <div class="text-center mt-5 fw-semibold">
         ✌️ This website was coded by Mohadeseh Moradian, and is
-        <a href="https://github.com/Mohad6588/portfolio">open-sourced</a>
+        <a href="https://github.com/Mohad6588/portfolio" target="_blank" >open-sourced</a>
       </div>
     </footer>
   </body>
