--- a/contact.html
+++ b/contact.html
@@ -61,20 +61,39 @@
   <section id="contact-section" class="content-container container">
     <div class="content">
       <h1 class="mb-5">Let's get in touch!</h1>
-      <h4 class="text-start">Email</h4>
-      <p><a href="mailto:m.moradi6588@gamil.com">m.moradi6588@gamil.com</a></p>
-      <h4 class="text-start">Twitter</h4>
-      <p>
-        <a href="https://www.twitter.com/mohadeseh" target="_blank"
-          >@Mohadeseh</a
-        >
-      </p>
-      <h4 class="text-start">Instagram</h4>
-      <p>
-        <a href="https://www.instagram.com/moadese8892" target="_blank"
-          >@Mohadese8892</a
-        >
-      </p>
+      <div class="row">
+        <div class="col-md-7">
+          <form class="border p-3 rounded mb-3">
+            <div class="mb-3">
+              <label class="form-label"> Your email: </label>
+              <input type="email" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label class="form-label"> Your message: </label>
+              <textarea class="form-control" required></textarea>
+            </div>
+            <button type="submit" class="button">Send</button>
+          </form>
+        </div>
+        <div class="col-md-5">
+          <h4 class="text-start">Email</h4>
+          <p>
+            <a href="mailto:m.moradi6588@gamil.com">m.moradi6588@gamil.com</a>
+          </p>
+          <h4 class="text-start">Twitter</h4>
+          <p>
+            <a href="https://www.twitter.com/mohadeseh" target="_blank"
+              >@Mohadeseh</a
+            >
+          </p>
+          <h4 class="text-start">Instagram</h4>
+          <p>
+            <a href="https://www.instagram.com/moadese8892" target="_blank"
+              >@Mohadese8892</a
+            >
+          </p>
+        </div>
+      </div>
     </div>
   </section>
   <footer class="container">
@@ -88,7 +107,7 @@
         </p>
       </div>
       <div>
-        <a class="button mt-4" href="/about.html" title="More about Mohadeseh"
+        <a class="button mt-4" href="/contact.html" title="Contact Mohadeseh"
           >Contact me</a
         >
       </div>
@@ -120,7 +139,9 @@
     </div>
     <div class="text-center mt-5 fw-semibold">
       ✌️ This website was coded by Mohadeseh Moradian, and is
-      <a href="https://github.com/Mohad6588/portfolio">open-sourced</a>
+      <a href="https://github.com/Mohad6588/portfolio" target="_blank"
+        >open-sourced</a
+      >
     </div>
   </footer>
 </body>
