--- a/contact.html
+++ b/contact.html
@@ -1,147 +1,150 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Mohadeseh</title>
-  <meta
-    name="description"
-    content="Mohadeseh is a front-end developer based in Iran."
-  />
-  <!-- CSS only -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-    crossorigin="anonymous"
-  />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;700&display=swap"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="/styles/portfolio.css" />
-  <!-- JavaScript Bundle with Popper -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://kit.fontawesome.com/6fc214008e.js"
-    crossorigin="anonymous"
-  ></script>
-</head>
-<body>
-  <nav>
-    <div class="header d-flex justify-content-between">
-      <a href="/"
-        ><div class="header-profile d-flex">
-          <img
-            class="profile-photo rounded-5"
-            src="/images/Profile.jpg"
-            alt="profile photo"
-          />
-          <p class="ps-3 d-none d-md-block">Mohadeseh Moradian</p>
-        </div></a
-      >
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Mohadeseh</title>
+    <meta
+      name="description"
+      content="Mohadeseh is a front-end developer based in Iran."
+    />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/portfolio.css" />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/6fc214008e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <nav>
+      <div class="header d-flex justify-content-between">
+        <a href="/"
+          ><div class="header-profile d-flex">
+            <img
+              class="profile-photo rounded-5"
+              src="/images/Profile.jpg"
+              alt="profile photo"
+            />
+            <p class="ps-3 d-none d-md-block">Mohadeseh Moradian</p>
+          </div></a
+        >
 
-      <ul>
-        <li><a href="/" title="Homepage">Home</a></li>
-        <li><a href="/about.html" title="About Mohadeseh">About</a></li>
-        <li><a href="/work.html" title="Mohadeseh's work">Work</a></li>
-        <li>
-          <a href="/contact.html" title="Contact Mohadeseh" class="active"
-            >Contact</a
+        <ul>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/about.html" title="About Mohadeseh">About</a></li>
+          <li><a href="/work.html" title="Mohadeseh's work">Work</a></li>
+          <li>
+            <a href="/contact.html" title="Contact Mohadeseh" class="active"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section id="contact-section" class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+        <div class="row">
+          <div class="col-md-7">
+            <form class="border p-3 rounded mb-3">
+              <div class="mb-3">
+                <label class="form-label"> Your email: </label>
+                <input type="email" class="form-control" required />
+              </div>
+              <div class="mb-3">
+                <label class="form-label"> Your message: </label>
+                <textarea class="form-control" required></textarea>
+              </div>
+              <button type="submit" class="button">Send</button>
+            </form>
+          </div>
+          <div class="col-md-5">
+            <h4 class="text-start">Email</h4>
+            <p>
+              <a href="mailto:m.moradi6588@gamil.com">m.moradi6588@gamil.com</a>
+            </p>
+            <h4 class="text-start">Twitter</h4>
+            <p>
+              <a href="https://www.twitter.com/mohadeseh" target="_blank"
+                >@Mohadeseh</a
+              >
+            </p>
+            <h4 class="text-start">Instagram</h4>
+            <p>
+              <a href="https://www.instagram.com/moadese8892" target="_blank"
+                >@Mohadese8892</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="container">
+      <div
+        class="contact-box d-block d-md-flex justify-content-between mb-5 rounded-3"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">
+            Let's work together and i'll help you by all my best
+          </p>
+        </div>
+        <div>
+          <a class="button mt-4" href="/contact.html" title="Contact Mohadeseh"
+            >Contact me</a
           >
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <section id="contact-section" class="content-container container">
-    <div class="content">
-      <h1 class="mb-5">Let's get in touch!</h1>
-      <div class="row">
-        <div class="col-md-7">
-          <form class="border p-3 rounded mb-3">
-            <div class="mb-3">
-              <label class="form-label"> Your email: </label>
-              <input type="email" class="form-control" required />
-            </div>
-            <div class="mb-3">
-              <label class="form-label"> Your message: </label>
-              <textarea class="form-control" required></textarea>
-            </div>
-            <button type="submit" class="button">Send</button>
-          </form>
-        </div>
-        <div class="col-md-5">
-          <h4 class="text-start">Email</h4>
-          <p>
-            <a href="mailto:m.moradi6588@gamil.com">m.moradi6588@gamil.com</a>
-          </p>
-          <h4 class="text-start">Twitter</h4>
-          <p>
-            <a href="https://www.twitter.com/mohadeseh" target="_blank"
-              >@Mohadeseh</a
-            >
-          </p>
-          <h4 class="text-start">Instagram</h4>
-          <p>
-            <a href="https://www.instagram.com/moadese8892" target="_blank"
-              >@Mohadese8892</a
-            >
-          </p>
         </div>
       </div>
-    </div>
-  </section>
-  <footer class="container">
-    <div
-      class="contact-box d-block d-md-flex justify-content-between mb-5 rounded-3"
-    >
-      <div>
-        <h3>Work Inquiry</h3>
-        <p class="text-muted">
-          Let's work together and i'll help you by all my best
-        </p>
-      </div>
-      <div>
-        <a class="button mt-4" href="/contact.html" title="Contact Mohadeseh"
-          >Contact me</a
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:m.moradi6588@gmail.com"
+          class="email-link"
+          title="Email-link"
+          >m.moradi6588@gmail.com</a
         >
       </div>
-    </div>
-    <div class="d-flex justify-content-center mb-5">
-      <a
-        href="mailto:m.moradi6588@gmail.com"
-        class="email-link"
-        title="Email-link"
-        >m.moradi6588@gmail.com</a
-      >
-    </div>
-    <div class="social-links d-flex justify-content-center">
-      <a href="https://github.com/Mohad6588" title="Github" target="_blank"
-        ><i class="fa-brands fa-github"></i
-      ></a>
-      <a
-        href="https://www.instagram.com/moadese8892"
-        title="Instagram"
-        target="_blank"
-        ><i class="fa-brands fa-instagram"></i
-      ></a>
-      <a
-        href="https://www.twitter.com/mohadeseh"
-        title="Twitter"
-        target="_blank"
-        ><i class="fa-brands fa-twitter"></i
-      ></a>
-    </div>
-    <div class="text-center mt-5 fw-semibold">
-      ✌️ This website was coded by Mohadeseh Moradian, and is
-      <a href="https://github.com/Mohad6588/portfolio" target="_blank"
-        >open-sourced</a
-      >
-    </div>
-  </footer>
-</body>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://github.com/Mohad6588" title="Github" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/moadese8892"
+          title="Instagram"
+          target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/mohadeseh"
+          title="Twitter"
+          target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+      </div>
+      <div class="text-center mt-5 fw-semibold">
+        ✌️ This website was coded by Mohadeseh Moradian, and is
+        <a href="https://github.com/Mohad6588/portfolio" target="_blank"
+          >open-sourced</a
+        >
+      </div>
+    </footer>
+  </body>
+</html>
