Updated some features

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="/images/Profile.jpg" alt="" class="img-fluid rounded-4" />
+          <img src="/images/photo.jpg" alt="" class="img-fluid rounded-4" />
         </div>
       </div>
     </section>
@@ -109,20 +109,20 @@
           ><i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.instagram.com/moadese8892"
+          href="https://www.instagram.com/mohadese8892"
           title="Instagram"
           target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
         <a
-          href="https://www.twitter.com/mohadeseh"
-          title="Twitter"
+          href="https://www.linkedin.com/in/mohadeseh-moradian-0811847b/"
+          title="Linkedin"
           target="_blank"
-          ><i class="fa-brands fa-twitter"></i
+          ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
-      <div class="text-center mt-5 fw-semibold">
-        ✌️ This website was coded by Mohadeseh Moradian, and is
+      <div class="text-center mt-5 fw-semibold text-muted">
+        👩‍💻This website was coded by Mohadeseh Moradian, and is
         <a href="https://github.com/Mohad6588/portfolio" target="_blank" >open-sourced</a>
       </div>
     </footer>
