--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p id="description">a front-end developer based in Iran</p>
       <p class="mb-5">and this is my online portfolio...</p>
       <div>
-        <a class="button" href="/about.html" title="More about Mohadeseh"
+        <a class="button-hero" href="/about.html" title="More about Mohadeseh"
           >More about me</a
         >
       </div>
@@ -83,24 +83,33 @@
               I entered the world of front-end development by gaining some
               knowledge in HTML, CSS, and JavaScript. I used my knowledge of
               these languages, along with my new skills in VS Code, to build a
-              landing page about Gaz. The page utilizes JavaScript functions to
-              create user interaction.
+              landing page about one product. The page utilizes JavaScript
+              functions to create user interaction.
             </p>
-            <a href="/work.html" class="button-outline">Learn more</a>
+            <a
+              href="https://63c71796de9268381cddbc92--visionary-cupcake-ade52b.netlify.app/"
+              target="_blank"
+              class="button-outline"
+              >Launch Page</a
+            >
           </div>
         </div>
         <div class="row">
           <div class="col project-description">
             <h2>Weather App</h2>
             <p>
-              I built a Vanilla JavaScript weather app in SheCodes Plus, an
-              advanced 8-week JavaScript coding workshop. Building upon my
-              previously-gained knowledge, I also became skilled in Bootstrap,
-              API's, real-life development workflow, hosting, and advanced
-              JavaScript. I combined all of these skills to create a
+              I built a Vanilla JavaScript weather app in this project. Building
+              upon my previously-gained knowledge, I also became skilled in
+              Bootstrap, API's, real-life development workflow, hosting, and
+              advanced JavaScript. I combined all of these skills to create a
               fully-functioning weather app.
             </p>
-            <a href="/work.html" class="button-outline">Learn more</a>
+            <a
+              href="https://superlative-boba-8dfa88.netlify.app/"
+              target="_blank"
+              class="button-outline"
+              >Launch App</a
+            >
           </div>
           <div class="col d-none d-lg-block">
             <img
@@ -114,17 +123,24 @@
           <div class="col d-none d-lg-block">
             <img
               class="img-fluid rounded mb-5"
-              src="/images/survey-form.jpg"
-              alt="survey-form preview"
+              src="/images/weather1B.JPG"
+              alt="react weather app preview"
             />
           </div>
           <div class="col project-description">
-            <h2>Survey Form</h2>
+            <h2>React Weather App</h2>
             <p>
-              I used my knowledge of HTML and CSS, along with my skills in VS
-              Code, to build a Survey Form about a Web development platform.
+              I designed and built another weather app. But this time I used
+              React framework. I used my knowledge of this highly-demanded framework to
+              build a working weather app incorporating coding best practices,
+              along with the most popular tools and technologies.
             </p>
-            <a href="/work.html" class="button-outline">Learn more</a>
+            <a
+              href="https://beamish-sopapillas-a6315f.netlify.app/"
+              target="_blank"
+              class="button-outline"
+              >Launch App</a
+            >
           </div>
         </div>
       </div>
@@ -158,21 +174,23 @@
           ><i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.instagram.com/moadese8892"
+          href="https://www.instagram.com/mohadese8892"
           title="Instagram"
           target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
         <a
-          href="https://www.twitter.com/mohadeseh"
-          title="Twitter"
+          href="https://www.linkedin.com/in/mohadeseh-moradian-0811847b/"
+          title="Linkedin"
           target="_blank"
-          ><i class="fa-brands fa-twitter"></i
+          ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
-      <div class="text-center mt-5 fw-semibold">
-        ✌️ This website was coded by Mohadeseh Moradian, and is
-        <a href="https://github.com/Mohad6588/portfolio" target="_blank">open-sourced</a>
+      <div class="text-center mt-5  text-muted">
+        👩‍💻This website was coded by Mohadeseh Moradian, and is
+        <a href="https://github.com/Mohad6588/portfolio" target="_blank"
+          >open-sourced</a
+        >
       </div>
     </footer>
   </body>
