--- a/work.html
+++ b/work.html
@@ -47,7 +47,6 @@
             <p class="ps-3 d-none d-md-block">Mohadeseh Moradian</p>
           </div></a
         >
-
         <ul>
           <li><a href="/" title="Homepage">Home</a></li>
           <li><a href="/about.html" title="About Mohadeseh">About</a></li>
@@ -63,30 +62,6 @@
     <section id="work-section" class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
-
-        <div class="row">
-          <div class="col-md-6 mb-4">
-            <img
-              src="/images/landing-page1.JPG"
-              alt="Landing Page"
-              class="img-fluid rounded-4 mb-3"
-            />
-            <h4 class="text-center">Landing Page</h4>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <img
-              src="/images/weather1.JPG"
-              alt="Weather App"
-              class="img-fluid rounded-4 mb-3"
-            />
-            <h4 class="text-center">Weather App</h4>
-            <p class="text-center text-muted">
-              Built with HTML, CSS and JavaScript
-            </p>
-          </div>
-        </div>
-
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
@@ -94,17 +69,92 @@
               alt="Survey Form"
               class="img-fluid rounded-4 mb-3"
             />
-            <h4 class="text-center">Survey Form</h4>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h4 class="text-center mb-0">Survey Form</h4>
+            <p class="text-center text-muted mb-2">Built with HTML and CSS</p>
+            <div class="text-center">
+              <a href="#" target="_blank" class="button mt-0">Launch Page</a>
+            </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="/images/tribute.JPG"
-              alt="Tribute Page"
+              src="/images/landing-page1.JPG"
+              alt="Landing Page"
               class="img-fluid rounded-4 mb-3"
             />
-            <h4 class="text-center">Tribute Page</h4>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h4 class="text-center mb-0">Landing Page</h4>
+            <p class="text-center text-muted mb-2">
+              Built with HTML, CSS, and JavaScript
+            </p>
+            <div class="text-center">
+              <a
+                href="https://63c71796de9268381cddbc92--visionary-cupcake-ade52b.netlify.app/"
+                target="_blank"
+                class="button mt-0"
+                >Launch Page</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="/images/weather1.JPG"
+              alt="Weather App"
+              class="img-fluid rounded-4 mb-3"
+            />
+            <h4 class="text-center mb-0">Weather App</h4>
+            <p class="text-center text-muted mb-2">
+              Built using HTML, an active API, advanced CSS and JavaScript
+            </p>
+            <div class="text-center">
+              <a
+                href="https://superlative-boba-8dfa88.netlify.app/"
+                target="_blank"
+                class="button mt-0"
+                >Launch App</a
+              >
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="/images/weather1B.JPG"
+              alt="React Weather App"
+              class="img-fluid rounded-4 mb-3"
+            />
+            <h4 class="text-center mb-0">React Weather App</h4>
+            <p class="text-center text-muted mb-2">
+              Built using HTML, an active API, advanced CSS, and React
+            </p>
+            <div class="text-center">
+              <a
+                href="https://beamish-sopapillas-a6315f.netlify.app/"
+                target="_blank"
+                class="button mt-0"
+                >Launch App</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 mb-4">
+          <img
+            src="/images/portfolio1.JPG"
+            alt="Portfolio"
+            class="img-fluid rounded-4 mb-3"
+          />
+          <h4 class="text-center mb-0">Responsive Portfolio</h4>
+          <p class="text-center text-muted mb-2">
+            Built with HTML and advanced CSS
+          </p>
+          <div class="text-center">
+            <a
+              href="https://symphonious-sunflower-8ca288.netlify.app/"
+              target="_blank"
+              class="button mt-0"
+              >Launch Page</a
+            >
           </div>
         </div>
       </div>
@@ -138,21 +188,23 @@
           ><i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.instagram.com/moadese8892"
+          href="https://www.instagram.com/mohadese8892"
           title="Instagram"
           target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
         <a
-          href="https://www.twitter.com/mohadeseh"
-          title="Twitter"
+          href="https://www.linkedin.com/in/mohadeseh-moradian-0811847b/"
+          title="Linkedin"
           target="_blank"
-          ><i class="fa-brands fa-twitter"></i
+          ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
-      <div class="text-center mt-5 fw-semibold">
-        ✌️ This website was coded by Mohadeseh Moradian, and is
-        <a href="https://github.com/Mohad6588/portfolio" target="_blank">open-sourced</a>
+      <div class="text-center mt-5 fw-semibold text-muted">
+        👩‍💻This website was coded by Mohadeseh Moradian, and is
+        <a href="https://github.com/Mohad6588/portfolio" target="_blank"
+          >open-sourced</a
+        >
       </div>
     </footer>
   </body>
