--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                 <label class="form-label"> Your message: </label>
                 <textarea class="form-control" required></textarea>
               </div>
-              <button type="submit" class="button">Send</button>
+              <button type="submit" class="button pt-2 pb-2">Send</button>
             </form>
           </div>
           <div class="col-md-5">
@@ -82,15 +82,15 @@
             <p>
               <a href="mailto:m.moradi6588@gamil.com">m.moradi6588@gamil.com</a>
             </p>
-            <h4 class="text-start">Twitter</h4>
+            <h4 class="text-start">Linkedin</h4>
             <p>
-              <a href="https://www.twitter.com/mohadeseh" target="_blank"
+              <a href="https://www.linkedin.com/in/mohadeseh-moradian-0811847b/" target="_blank"
                 >@Mohadeseh</a
               >
             </p>
             <h4 class="text-start">Instagram</h4>
             <p>
-              <a href="https://www.instagram.com/moadese8892" target="_blank"
+              <a href="https://www.instagram.com/mohadese8892" target="_blank"
                 >@Mohadese8892</a
               >
             </p>
@@ -127,20 +127,20 @@
           ><i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.instagram.com/moadese8892"
+          href="https://www.instagram.com/mohadese8892"
           title="Instagram"
           target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
         <a
-          href="https://www.twitter.com/mohadeseh"
-          title="Twitter"
+          href="https://www.linkedin.com/in/mohadeseh-moradian-0811847b/"
+          title="Linkedin"
           target="_blank"
-          ><i class="fa-brands fa-twitter"></i
+          ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
-      <div class="text-center mt-5 fw-semibold">
-        ✌️ This website was coded by Mohadeseh Moradian, and is
+      <div class="text-center mt-5 fw-semibold text-muted">
+        👩‍💻This website was coded by Mohadeseh Moradian, and is
         <a href="https://github.com/Mohad6588/portfolio" target="_blank"
           >open-sourced</a
         >
